--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  webview_flutter: ^4.4.2
+  http: ^1.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.1
+  webview_flutter_android: ^4.3.0
 
 dev_dependencies:
   flutter_test:
